--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
           name="name-label"
           placeholder="Name"
         />
+
+
+
+
+
         <label for="email">Email</label>
         <input
           type="email"
@@ -51,9 +56,9 @@
           placeholder="Num"
           required
         />
-        <div class="dropdown">
+        <div CLASS="dropdown">
           <label for="dropdown">Choose a number:</label>
-          <select name="dropdown-label" id="dropdown">
+          <select name="dropdown-label" id = "dropdown">
             <option value="9">9</option>
             <option value="10">10</option>
             <option value="11">11</option>
